--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#070A0F</color>
     <color name="white">#FFFFFF</color>
+    <color name="lightCard">#FFFFFF</color>
     <color name="primary">#CAFB8D</color>
     <color name="primaryForeground">#303E1E</color>
     <color name="mutedPrimaryForeground">#5B303E1E</color>
@@ -9,10 +10,80 @@
     <color name="accentForeground">#4E3712</color>
     <color name="secondary">#070A0F</color>
     <color name="secondaryForeground">#FFFFFF</color>
-    <color name="background">#F7F6F2</color>
+    <color name="lightBackground">#F7F6F2</color>
     <color name="foreground">#070A0F</color>
-    <color name="destructive">#811D1D </color>
-    <color name="destructiveForeground">#FEF1F1</color>
+    <color name="destructive">#FEF1F1</color>
+    <color name="destructiveForeground">#811D1D</color>
     <color name="border">#27272A</color>
     <color name="ring">#157F3C</color>
+    <color name="darkPrimary">#CAFB8D</color>
+    <color name="darkPrimaryForeground">#E9FECD</color>
+    <color name="darkBackground">#22251D</color>
+    <color name="darkCard">#373932</color>
+    <color name="darkSurface">#373932</color>
+    <color name="darkMutedPrimaryForeground">#949692</color>
+    <color name="seed">#CAFB8D</color>
+    <color name="md_theme_light_primary">#426908</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#C1F285</color>
+    <color name="md_theme_light_onPrimaryContainer">#102000</color>
+    <color name="md_theme_light_secondary">#446813</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#C4F18C</color>
+    <color name="md_theme_light_onSecondaryContainer">#102000</color>
+    <color name="md_theme_light_tertiary">#7F5700</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDEAD</color>
+    <color name="md_theme_light_onTertiaryContainer">#281900</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#F6FFF1</color>
+    <color name="md_theme_light_onBackground">#002107</color>
+    <color name="md_theme_light_surface">#F6FFF1</color>
+    <color name="md_theme_light_onSurface">#002107</color>
+    <color name="md_theme_light_surfaceVariant">#E1E4D5</color>
+    <color name="md_theme_light_onSurfaceVariant">#44483D</color>
+    <color name="md_theme_light_outline">#75796C</color>
+    <color name="md_theme_light_inverseOnSurface">#C6FFC6</color>
+    <color name="md_theme_light_inverseSurface">#003912</color>
+    <color name="md_theme_light_inversePrimary">#A6D56C</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#426908</color>
+    <color name="md_theme_light_outlineVariant">#C5C8BA</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_light_surfaceContainerHighest">#EDF7E7</color>
+    <color name="md_theme_dark_primary">#A6D56C</color>
+    <color name="md_theme_dark_onPrimary">#1F3700</color>
+    <color name="md_theme_dark_primaryContainer">#2F4F00</color>
+    <color name="md_theme_dark_onPrimaryContainer">#C1F285</color>
+    <color name="md_theme_dark_secondary">#A9D473</color>
+    <color name="md_theme_dark_onSecondary">#1F3700</color>
+    <color name="md_theme_dark_secondaryContainer">#304F00</color>
+    <color name="md_theme_dark_onSecondaryContainer">#C4F18C</color>
+    <color name="md_theme_dark_tertiary">#FBBB4A</color>
+    <color name="md_theme_dark_onTertiary">#432C00</color>
+    <color name="md_theme_dark_tertiaryContainer">#604100</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFDEAD</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#1C201B</color>
+    <color name="md_theme_dark_onBackground">#A4F5A9</color>
+    <color name="md_theme_dark_surface">#002107</color>
+    <color name="md_theme_dark_onSurface">#FFFFFF</color>
+    <color name="md_theme_dark_surfaceVariant">#44483D</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C5C8BA</color>
+    <color name="md_theme_dark_outline">#8F9285</color>
+    <color name="md_theme_dark_inverseOnSurface">#002107</color>
+    <color name="md_theme_dark_inverseSurface">#A4F5A9</color>
+    <color name="md_theme_dark_inversePrimary">#426908</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#A6D56C</color>
+    <color name="md_theme_dark_outlineVariant">#44483D</color>
+    <color name="md_theme_dark_scrim">#000000</color>
+    <color name="md_theme_dark_surfaceContainerHigh">#474B46</color>
+    <color name="md_theme_dark_surfaceContainerHighest">#313530</color>
 </resources>
