--- a/app/src/main/res/drawable/gradient_app_bar_bg.xml
+++ b/app/src/main/res/drawable/gradient_app_bar_bg.xml
@@ -5,5 +5,5 @@
         android:angle="90"
         android:centerY="0.2"
         android:endColor="@android:color/transparent"
-        android:startColor="@color/background" />
+        android:startColor="?android:attr/colorBackground" />
 </shape>
