--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="68"
+    android:viewportHeight="60">
+  <group android:scaleX="0.29"
+      android:scaleY="0.25588235"
+      android:translateX="24.14"
+      android:translateY="22.32353">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M7.947,22.105L60.053,22.105A7.895,7.895 0,0 1,67.947 30L67.947,30A7.895,7.895 0,0 1,60.053 37.895L7.947,37.895A7.895,7.895 0,0 1,0.053 30L0.053,30A7.895,7.895 0,0 1,7.947 22.105z"
+        android:fillColor="#303E1E"/>
+    <path
+        android:pathData="M8,44L38,44A8,8 0,0 1,46 52L46,52A8,8 0,0 1,38 60L8,60A8,8 0,0 1,0 52L0,52A8,8 0,0 1,8 44z"
+        android:fillColor="#303E1E"/>
+    <path
+        android:pathData="M60.053,44.21L60.053,44.21A7.895,7.895 0,0 1,67.947 52.105L67.947,52.105A7.895,7.895 0,0 1,60.053 60L60.053,60A7.895,7.895 0,0 1,52.158 52.105L52.158,52.105A7.895,7.895 0,0 1,60.053 44.21z"
+        android:fillColor="#303E1E"/>
+    <path
+        android:pathData="M60,0L30,0A8,8 0,0 0,22 8L22,8A8,8 0,0 0,30 16L60,16A8,8 0,0 0,68 8L68,8A8,8 0,0 0,60 0z"
+        android:fillColor="#303E1E"/>
+    <path
+        android:pathData="M7.947,0L7.947,0A7.895,7.895 0,0 0,0.053 7.895L0.053,7.895A7.895,7.895 0,0 0,7.947 15.79L7.947,15.79A7.895,7.895 0,0 0,15.842 7.895L15.842,7.895A7.895,7.895 0,0 0,7.947 0z"
+        android:fillColor="#303E1E"/>
+  </group>
 </vector>
