--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,13 +4,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
+        android:layout_height="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/background"
             android:orientation="vertical">
 
             <android.widget.SearchView
@@ -32,12 +31,12 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginHorizontal="@dimen/_16sdp"
                 android:layout_weight="1"
-                android:paddingBottom="@dimen/_80sdp"
                 android:clipToPadding="false"
-                app:layout_constraintBottom_toTopOf="@id/addJournalButton"
+                android:paddingBottom="@dimen/_80sdp"
+                app:layout_constraintBottom_toTopOf="@id/btn_add_journal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/search_bar" />
@@ -76,11 +75,12 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="@dimen/_80sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/gradient_app_bar_bg" />
+            android:src="@drawable/gradient_app_bar_bg"
+            android:contentDescription="@string/gradient_bottom_description"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addJournalButton"
+            android:id="@+id/btn_add_journal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -94,5 +94,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:tint="@color/primaryForeground" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/_16sdp"
+            android:backgroundTint="?attr/colorErrorContainer"
+            android:contentDescription="@string/add_journal_button_label"
+            android:elevation="0dp"
+            android:src="@drawable/ic_delete"
+            android:visibility="gone"
+            app:elevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:tint="?attr/colorOnErrorContainer" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
