--- a/app/src/main/res/layout/fragment_create_journal.xml
+++ b/app/src/main/res/layout/fragment_create_journal.xml
@@ -63,9 +63,10 @@
                 android:background="@null"
                 android:ellipsize="end"
                 android:hint="@string/judul_placeholder"
-                android:inputType="text"
-                android:maxLines="1"
+                android:minLines="1"
+                android:maxLines="2"
                 android:textSize="@dimen/_28ssp"
+                android:inputType="textMultiLine"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
