--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -48,4 +48,8 @@
         <item name="android:editTextColor">@color/white</item>
         <item name="android:textColorHint">@color/darkMutedPrimaryForeground</item>
     </style>
+
+    <style name="Theme.AlertDialog" parent="ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="colorSurface">@color/md_theme_dark_surfaceContainerHighest</item>
+    </style>
 </resources>
