--- a/app/src/main/res/layout/item_rv_journals.xml
+++ b/app/src/main/res/layout/item_rv_journals.xml
@@ -8,8 +8,19 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_5sdp"
         android:padding="@dimen/_5sdp"
-        app:strokeWidth="0dp"
-        >
+        app:strokeWidth="0dp">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/tv_emotion"
+                android:textSize="@dimen/_14ssp"
+                android:layout_margin="@dimen/_10sdp"
+                android:layout_gravity="bottom|end"
+                android:layout_height="wrap_content" android:text="@string/default_emotion"/>
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
