--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,17 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <style name="Base.Theme.SelarasJournalingApp" parent="Theme.Material3.Dark.NoActionBar">
-<!--        <item name="android:colorBackground">@color/darkBackground</item>-->
-<!--        <item name="colorPrimarySurface">@color/darkSurface</item>-->
-<!--        <item name="android:colorSecondary">@color/darkCard</item>-->
-<!--        <item name="android:textColor">@color/white</item>-->
-<!--        <item name="android:colorForeground">@color/darkPrimaryForeground</item>-->
-<!--        <item name="android:textColorHint">@color/darkMutedPrimaryForeground</item>-->
-<!--        <item name="android:editTextColor">@color/white</item>-->
-<!--        <item name="android:textColorHighlight">@color/accent</item>-->
-<!--        <item name="colorAccent">@color/accent</item>-->
-<!--        <item name="colorSurface">@color/accent</item>-->
-<!--        <item name="colorOnSurface">@color/white</item>-->
-<!--        <item name="colorOnSurfaceVariant">@color/accentForeground</item>-->
         <item name="colorPrimary">@color/md_theme_dark_primary</item>
         <item name="colorOnPrimary">@color/md_theme_dark_onPrimary</item>
         <item name="colorPrimaryContainer">@color/md_theme_dark_primaryContainer</item>
@@ -40,6 +28,8 @@
         <item name="colorPrimaryInverse">@color/md_theme_dark_inversePrimary</item>
         <item name="colorSurfaceContainerHigh">@color/md_theme_dark_surfaceContainerHigh</item>
         <item name="colorSurfaceContainerHighest">@color/md_theme_dark_surfaceContainerHighest</item>
+        <item name="android:textColorHighlight">@color/accentForeground</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
 
     <style name="Theme.SelarasJournalingApp" parent="Base.Theme.SelarasJournalingApp" />
