--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,6 +28,10 @@
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
         <item name="elevationOverlayEnabled">false</item>
         <item name="colorSurfaceContainerHighest">@color/md_theme_light_surfaceContainerHighest</item>
+        <item name="android:textColorHighlight">@color/accent</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColor">@color/accentForeground</item>
+        <item name="android:panelBackground">@color/md_theme_light_surfaceContainerHighest</item>
     </style>
 
     <style name="Theme.SelarasJournalingApp" parent="Base.Theme.SelarasJournalingApp" />
