--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,4 +40,8 @@
         <item name="android:editTextColor">?attr/colorOnPrimaryContainer</item>
         <item name="android:textColorHint">@color/mutedPrimaryForeground</item>
     </style>
+
+    <style name="Theme.AlertDialog" parent="ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="colorSurface">@color/md_theme_light_surfaceContainerHighest</item>
+    </style>
 </resources>
